--- a/Stylish calculator.css
+++ b/Stylish calculator.css
@@ -1,70 +1,59 @@
-.areaCalc{
-			display: grid;
-			grid-template-areas: "inputCalc" 
-								 "bodyCalc_keys";
-			grid-template-rows: 1fr 3fr;
+.areaCalc {
+  display: grid;
+  grid-template-areas:
+    "inputCalc"
+    "bodyCalc_keys";
+  grid-template-rows: 1fr 3fr;
 
+  border-radius: 40px;
 
-			border-radius: 40px;
+  width: fit-content;
+  height: fit-content;
+  margin: 10% 0px 0px 10%;
+  grid-auto-columns: minmax(300px, 300px);
+  grid-auto-columns: minmax(200px, 400px);
+  overflow: hidden;
 
-			width: fit-content;
-			height: fit-content;
-			margin: 10% 0px 0px 10%;
-			grid-auto-columns:minmax(300px, 300px) ;
-			grid-auto-columns:minmax(200px, 400px);
-			overflow: hidden;
+  color: rgb(0, 0, 0);
+  background: #adadad;
+  font-family: "Inter", sans-serif;
+}
+.bodyCalc_keys {
+  grid-area: bodyCalc_keys;
+  border: 1px solid;
+  border-top: 2px #adadad solid;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: minmax(1fr, 3fr);
+}
 
-			color: white;
-			background: #adadad;
-
-
-
-		}
-		.bodyCalc_keys{
-
-			grid-area: bodyCalc_keys;
-			border: 1px solid;
-			border-top: 2px #adadad solid;
-			border-right: 0;
-			border-left: 0;
-			border-bottom: 0;
-			display: grid;
-			grid-template-columns: 1fr 1fr 1fr 1fr;
-			grid-auto-rows: minmax(1fr, 3fr);
-		}
-		.bodyCalc_keys_buttons{
-			border: 1px solid white #adadad;
-			padding: 15px;
-			text-align: center;
-			font-family: 'Inter', sans-serif;
-			font-size: calc(24px + 16 * (100vw / 1280));
-			background-color: black;
-
-			
-
-
-		}
-		.inputCalc{
-			grid-area: inputCalc;
-			height : 15vh;
-			width: 100%;
-			border-bottom-width: 0;
-			background: #adadad;
-			
-			
-
-		}
-		.inp{
-			
-			font-size: calc(24px + 16 * (100vw / 1000));	
-/*			font-size: 60px;*/
-			text-align: center;
-
-
-
-
-		}
-		.bodyCalc_keys_buttons:hover { background: #adadad; }
-
-
-	
+.bodyCalc_keys_buttons {
+  color: white;
+  border: 1px solid white #adadad;
+  padding: 15px;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: calc(24px + 16 * (100vw / 1280));
+  background-color: black;
+  transition: 0s;
+}
+.inputCalc {
+  grid-area: inputCalc;
+  height: 15vh;
+  width: 100%;
+  border-bottom-width: 0;
+  background: #adadad;
+}
+.inp {
+  font-size: calc(24px + 16 * (100vw / 1000));
+  /*			font-size: 60px;*/
+  text-align: center;
+}
+.bodyCalc_keys_buttons:hover {
+  background: #adadad;
+  transition: 0.4s;
+  color: black;
+}
